# parser_sentiment_model

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: RU_RUNBOOK.md
scripts/: bootstrap_minio.py
src/text_ingestion/: __init__.py  cli.py  config.py  logging.py  metrics.py  models.py
src/text_ingestion/api/: __init__.py  model_client.py
src/text_ingestion/collectors/: __init__.py  base.py  reddit.py  reviews.py  rss.py
src/text_ingestion/flows/: __init__.py  batch.py  common.py  live.py  replay.py
src/text_ingestion/rate_limit/: __init__.py  limiter.py
src/text_ingestion/storage/: __init__.py  minio_store.py
src/text_ingestion/utils/: dedupe.py  time.py
tests/: test_collectors.py  test_config.py  test_model_client.py  test_models.py  test_rate_limiter.py  test_storage.py
