[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streaming-text-ingestion"
version = "0.1.0"
description = "Production-style streaming text ingestion and replay system for model API inference requests."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Team" }]
dependencies = [
    "boto3>=1.34,<2",
    "feedparser>=6.0,<7",
    "httpx>=0.27,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "python-dotenv>=1.0,<2",
    "structlog>=24.1,<26",
    "tenacity>=8.2,<10",
    "typer>=0.12,<1",
]

[project.optional-dependencies]
reddit = ["praw>=7.7,<8"]
dev = [
    "black>=24.0,<27",
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.6,<1",
]

[project.scripts]
text-ingest = "text_ingestion.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/text_ingestion"]

[tool.poetry.group.dev.dependencies]
black = ">=24.0,<27"
pytest = ">=8.0,<9"
pytest-asyncio = ">=0.23,<1"
ruff = ">=0.6,<1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["B008"]
